testing fix for input shadows on mobile

--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -28,8 +28,8 @@ input {
 input[type='number']::-webkit-inner-spin-button,
 input[type='number']::-webkit-outer-spin-button,
 input[type='search']::-webkit-search-cancel-button,
-input[type='search']::-webkit-search-decoration,
-input[type='search'] {
+input[type='search']::-webkit-search-decoration {
+  appearance: none;
   -webkit-appearance: none;
 }
 button {
